Replace logo images with pure CSS design and animations

--- a/index.html
+++ b/index.html
@@ -25,20 +25,25 @@
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-top: 30px; max-width: 900px; margin-left: auto; margin-right: auto;">
                     <!-- IvSign -->
                     <div class="product-card" id="productIvSign" data-product="ivsign">
-                        <div class="product-logo">
-                            <img src="" alt="IvSign" id="ivSignLogo">
+                        <div class="product-icon">
+                            <div class="icon-cloud">☁️</div>
                         </div>
-                        <h3 style="color: #2d3748; margin-top: 20px; font-size: 1.5em;">IvSign</h3>
-                        <p style="color: #718096; font-size: 0.95em; margin-top: 5px;">Firma electrónica</p>
+                        <h3>IvSign</h3>
+                        <p class="product-subtitle">Producto Signaturit</p>
+                        <p class="product-desc">Firma electrónica</p>
                     </div>
 
                     <!-- IvNeos -->
                     <div class="product-card" id="productIvNeos" data-product="ivneos">
-                        <div class="product-logo">
-                            <img src="" alt="IvNeos" id="ivNeosLogo">
+                        <div class="product-icon">
+                            <div class="icon-envelopes">
+                                <span class="envelope env-1">✉️</span>
+                                <span class="envelope env-2">✉️</span>
+                                <span class="envelope env-3">✉️</span>
+                            </div>
                         </div>
-                        <h3 style="color: #2d3748; margin-top: 20px; font-size: 1.5em;">IvNeos</h3>
-                        <p style="color: #718096; font-size: 0.95em; margin-top: 5px;">Gestión de notificaciones</p>
+                        <h3>IvNeos</h3>
+                        <p class="product-desc">Gestión de notificaciones</p>
                     </div>
                 </div>
             </div>
