--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador CSV para CLI - Signaturit</title>
+    
+    <!-- 
+    ╔════════════════════════════════════════╗
+    ║  CSV Generator for CLI - Signaturit   ║
+    ║  Version: 2.1.0                        ║
+    ║  Last Updated: 2025-02-25              ║
+    ╚════════════════════════════════════════╝
+    -->
+    
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚀 Generador CSV para CLI</h1>
-            <p>Convierte tus Excel al formato correcto para los comandos del sistema</p>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <div style="flex: 1;">
+                    <h1>🚀 CSV Generator for CLI</h1>
+                    <p>Convert your Excel to the correct format for system commands</p>
+                </div>
+                <div class="version-badge">
+                    <span class="version-label">Version</span>
+                    <span class="version-number">2.1.0</span>
+                </div>
+            </div>
         </div>
 
         <div class="content">
