--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- 
     ╔════════════════════════════════════════╗
     ║  CSV Generator for CLI - Signaturit   ║
-    ║  Version: 4.0.0                        ║
+    ║  Version: 4.0.1                        ║
     ║  Last Updated: 2025-02-25              ║
     ║  Products: IvSign + IvNeos             ║
     ║  Features: Multi-format + Transform    ║
@@ -37,7 +37,7 @@
                 </div>
                 <div class="version-badge">
                     <span class="version-label">Version</span>
-                    <span class="version-number">4.0.0</span>
+                    <span class="version-number">4.0.1</span>
                 </div>
             </div>
         </div>
@@ -192,11 +192,8 @@
                 </div>
 
                 <div class="button-group" style="margin: 20px 0;">
-                    <button class="btn btn-primary" id="autoProcessBtn" style="background: #28a745; flex: 2; font-size: 1.1em;">
-                        ⚡ Auto-Procesar (Mapeo OK → Generar CSV)
-                    </button>
-                    <button class="btn btn-primary" id="manualMappingBtn" style="flex: 1;">
-                        🔧 Ajustar Mapeo Manualmente
+                    <button class="btn btn-primary" id="manualMappingBtn" style="width: 100%; font-size: 1.1em;">
+                        🔧 Revisar y Ajustar Mapeo
                     </button>
                 </div>
 
